--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,27 @@
 spring.application.name=UserServiceAugMorning
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/userDBAugMorning
+spring.datasource.username=user1
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql: true
+
+
+
+# Logging level configuration
+logging.level.org.springframework.security=trace
+
+# Spring Security user configuration
+spring.security.user.name=user
+spring.security.user.password=password
+
+# Spring Security OAuth2 Authorization Server client configuration
+spring.security.oauth2.authorizationserver.client.oidc-client.registration.client-id=oidc-client
+spring.security.oauth2.authorizationserver.client.oidc-client.registration.client-secret={noop}secret
+spring.security.oauth2.authorizationserver.client.oidc-client.registration.client-authentication-methods=client_secret_basic
+spring.security.oauth2.authorizationserver.client.oidc-client.registration.authorization-grant-types=authorization_code,refresh_token
+spring.security.oauth2.authorizationserver.client.oidc-client.registration.redirect-uris=http://127.0.0.1:8080/login/oauth2/code/oidc-client
+spring.security.oauth2.authorizationserver.client.oidc-client.registration.post-logout-redirect-uris=http://127.0.0.1:8080/
+spring.security.oauth2.authorizationserver.client.oidc-client.registration.scopes=openid,profile
+spring.security.oauth2.authorizationserver.client.oidc-client.require-authorization-consent=true
