init code for Security and JWT using in-memory storage

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,17 @@ spring.datasource.username=userTest
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
+
+
+logging.level.org.springframework.security=trace 
+# give me all the possible logs.
+
+spring.security.user.name=user
+spring.security.user.password=password
+
+spring.security.oauth2.authorizationserver.client.oidc-client.registration.client-id=oidc-client
+spring.security.oauth2.authorizationserver.client.oidc-client.registration.client-secret={noop}secret
+spring.security.oauth2.authorizationserver.client.oidc-client.registration.client-authentication-methods[0]=client_secret_basic
+spring.security.oauth2.authorizationserver.client.oidc-client.registration.authorization-grant-types[0]=authorization_code
+spring.security.oauth2.authorizationserver.client.oidc-client.registration.authorization-grant-types[1]=refresh_token
+spring.security.oauth2.authorizationserver.client.oidc-client.registration.redirect-uris[0]=http://127.0.0.1:
