working kafka push code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,9 @@ spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 
+server.port=9000
 
-logging.level.org.springframework.security=trace 
+logging.level.org.springframework.security=trace
 # give me all the possible logs.
 
 spring.security.user.name=user
