working eureka code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 
-server.port=9000
+
 
 logging.level.org.springframework.security=trace
 # give me all the possible logs.
@@ -21,3 +21,9 @@ spring.security.oauth2.authorizationserver.client.oidc-client.registration.clien
 spring.security.oauth2.authorizationserver.client.oidc-client.registration.authorization-grant-types[0]=authorization_code
 spring.security.oauth2.authorizationserver.client.oidc-client.registration.authorization-grant-types[1]=refresh_token
 spring.security.oauth2.authorizationserver.client.oidc-client.registration.redirect-uris[0]=http://127.0.0.1:
+
+
+server.port=${SERVER_PORT}
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone:http://localhost:8761/eureka/
